--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,19 @@
 body {
-  font-family: Arial, sans-serif;
+  /* font-family: Arial, sans-serif;
   font-size: 16px;
-  color: #222;
-  background-color: #fff;
+  /* color: #222; */
+  background-color: #252a34;
   text-align: center;
-  line-height: 1.4em;
+  line-height: 1.4em;  
+  font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
+  margin: 0;
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  padding: 0;
+  color: #eaeaea;
+  line-height: 1.5;
 }
 
 main {
