--- a/views/index.html
+++ b/views/index.html
@@ -2,31 +2,31 @@
 
 <html>
   <head>
-    <title>URL Shortener Microservice | freeCodeCamp.org</title>
+    <title>URL Shortener</title>
     <link
       rel="icon"
-      type="image/png"
-      href="https://cdn.freecodecamp.org/universal/favicons/favicon-16x16.png"
+      type="image/x-icon"
+      href="/public/favicon.ico"
     />
     <link href="/public/style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
-    <h1>URL Shortener Microservice</h1>
+    <h1>URL Shortener</h1>
     <main>
       <section>
         <form action="api/shorturl" method="POST">
           <fieldset>
             <legend>URL Shortener</legend>
             <label for="url_input">URL:</label>
-            <input id="url_input" type="text" name="url" placeholder="https://www.freecodecamp.org/" />
+            <input id="url_input" type="text" name="url" placeholder="Enter link here" />
             <input type="submit" value="POST URL" />
           </fieldset>
         </form>
       </section>
     </main>
     <footer>
-      <p>By <a href="https://www.freecodecamp.org/">freeCodeCamp</a></p>
+      <p>By Amunwes <a href="https://amunwes.github.io/">My website</a></p>
     </footer>
   </body>
 </html>
