--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
     <h1>URL Shortener</h1>
     <main>
       <section>
-        <form action="api/shorturl" method="POST">
+        <form action="shorten" method="POST">
           <fieldset>
             <legend>URL Shortener</legend>
             <label for="url_input">URL:</label>
